--- a/books/authors
+++ b/books/authors
@@ -1,2 +1,3 @@
 # first name, last name, email, url
 Paul,Cobbaut,paul.cobbaut&#064;gmail.com,http://www.linkedin.com/in/cobbaut
+Aleksander,Korzynski,ak&#064;wants-no-spam.akorzy.com,https://www.akorzy.com
