--- a/README
+++ b/README
@@ -64,7 +64,7 @@ countries. UNIX® is a registered trademark of The Open Group.
   package. We have a JAVAHOME hardcoded to this somewhere in the build script.
   - sun-java6-bin
   - default-jdk
-- xmlto : for building the html pages
+- xsltproc : for building the html pages
 - fop : for building pdf documents
 
 ** Build commands
