--- a/README
+++ b/README
@@ -1,13 +1,13 @@
 Commence the Commands will gently and humorously introduce you to the useful
 art of controlling a Linux computer using the keyboard, rather than the
 mouse. It comes in the form of a quick-start guide, which should take about
-30 minutes to study. In addition, it is combined with practical exercises,
+30 minutes to read. In addition, it is combined with practical exercises,
 which should take about 90 minutes to do.
 
 This minibook is a part of a full-length book, entitled Linux Doesn't
 Have to Be Hard: A Beginner's Guide, comprehensively covering not only the
 command line, but also other fundamental Linux features. The full-length
-book has not been published yet and is currently work-in-progress. If you
+book has not been published yet and is currently a work in progress. If you
 like this quick-start guide, please subscribe to the Userbie Newsletter
 <http://userbie.com/newsletter>, where newly published free Linux guides
 will be announced.
