--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-Commence the Commands will gently and humorously introduce you to the useful
-art of controlling a Linux computer using the keyboard, rather than the
-mouse. It comes in the form of a quick-start guide, which should take about
-30 minutes to read. In addition, it is combined with practical exercises,
-which should take about 90 minutes to do.
+45 Minutes to Get Started on the Command Line will gently and humorously
+introduce you to the useful art of controlling a Linux computer using the
+keyboard, rather than the mouse. It comes in the form of a quick-start guide,
+which should take about 45 minutes to read. In addition, it is combined with
+practical exercises, which should take about 90 minutes to do.
 
 This minibook is a part of a full-length book, entitled Linux Doesn't
 Have to Be Hard: A Beginner's Guide, comprehensively covering not only the
@@ -24,7 +24,7 @@ what you learn.
 
 This quick-start guide covers accessing and searching the Linux manuals,
 as well as working with files and directories. It is the minimal information
-you need to get started with the command line.  
+you need to get started with the command line.
 
 This book belongs to the Userbie series of guides, which are available
 gratis. They are community-developed and you are encouraged to
@@ -36,26 +36,26 @@ the guide.
 This book has been originally written by Paul Cobbaut. Its
 maintenance has since been taken over by Aleksander Korzynski and
 the Userbie team. The latest version of this guide is available at:
-<http://userbie.com/commence-the-commands>.
+<http://userbie.com/45-minutes-to-get-started-on-the-command-line>.
 
 This edition has been created by Aleksander Korzynski. Feel free to contact
 him at <ak@wants-no-spam.akorzy.com> (remove wants-no-spam.). His personal
 website is located at <http://akorzy.com>.
 
-The publisher of this edition is KZS Press, trading name of KZS Commerce
-Ltd, 7 Kings Avenue, Manchester, Greater Manchester, M8 5AS, United Kingdom.
+The publisher of this edition is KZS Press, trading name of KZS Commerce Ltd,
+7 Kings Avenue, Manchester, Greater Manchester, M8 5AS, United Kingdom.
 
 Copyright © 2007-2015, 2020 Netsec BVBA, Paul Cobbaut, Aleksander Korzynski
 
 Permission is granted to copy, distribute and/or modify this document under
-the terms of the GNU Free Documentation License, Version 1.3 published by the
-Free Software Foundation; with no Front-Cover Texts, no Back-Cover Texts and
-an Invariant Section entitled Preface; with Aleksander Korzynski as the proxy
-for deciding if a later version of the license can be used. A copy of the
-license is included in the section entitled GNU Free Documentation License.
+the terms of the GNU Free Documentation License, Version 1.3 published by
+the Free Software Foundation; with no Front-Cover Texts, no Back-Cover Texts
+and an Invariant Section entitled Preface; with Aleksander Korzynski as the
+proxy for deciding if a later version of the license can be used. A copy of
+the license is included in the section entitled GNU Free Documentation License.
 
 Linux® is the registered trademark of Linus Torvalds in the U.S. and other
-countries. UNIX® is a registered trademark of The Open Group.  
+countries. UNIX® is a registered trademark of The Open Group.
 
 
 ** Dependencies
