Set the title to Get Started on Linux in 45 Minutes: Intro to the Shell

--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-45 Minutes to Get Started on the Command Line will gently and humorously
-introduce you to the useful art of controlling a Linux computer using the
-keyboard, rather than the mouse. It comes in the form of a quick-start guide,
-which should take about 45 minutes to read. In addition, it is combined with
-practical exercises, which should take about 90 minutes to do.
+Get Started on Linux in 45 Minutes will gently and humorously introduce you
+to the useful art of controlling a Linux computer using the keyboard, rather
+than the mouse. It comes in the form of a quick-start guide, which should
+take about 45 minutes to read. In addition, it is combined with practical
+exercises, which should take about 90 minutes to do.
 
 This minibook is a part of a full-length book, entitled Linux Doesn't
 Have to Be Hard: A Beginner's Guide, comprehensively covering not only the
@@ -36,7 +36,7 @@ the guide.
 This book has been originally written by Paul Cobbaut. Its
 maintenance has since been taken over by Aleksander Korzynski and
 the Userbie team. The latest version of this guide is available at:
-<http://userbie.com/45-minutes-to-get-started-on-the-command-line>.
+<http://userbie.com/get-started-on-linux-in-45-minutes>.
 
 This edition has been created by Aleksander Korzynski. Feel free to contact
 him at <ak@wants-no-spam.akorzy.com> (remove wants-no-spam.). His personal
